--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=paymybuddy
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/pay_my_buddy
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
